<resources>
    <string name="app_name">BT Printer 2</string>
    <string name="action_settings">Settings</string>
    <string name="sender">Sender</string>
    <string name="receiver">Receiver</string>
    <string name="check">Check</string>
    <string name="scan">Scan</string>
    <string name="print">Print</string>
    <string name="type58mm">58mm</string>
    <string name="type80mm">80mm</string>
</resources>
